--- a/hermes-client/src/main/resources/views/registration-view/registeration.fxml
+++ b/hermes-client/src/main/resources/views/registration-view/registeration.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -17,10 +18,9 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f4f5f8" height="709.0" layoutY="-6.0" stroke="TRANSPARENT" strokeType="INSIDE" width="607.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e8e5e5" height="709.0" layoutY="-3.0" stroke="TRANSPARENT" strokeType="INSIDE" width="607.0" />
       <ImageView fitHeight="204.0" fitWidth="607.0" layoutX="-6.0" layoutY="-1.0">
          <image>
             <Image url="@../../images/hermesLogo.png" />
@@ -60,13 +60,13 @@
             <TextField fx:id="countryTextField" layoutX="10.0" layoutY="92.0" promptText="country" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <TextField fx:id="confirmPasswordTextField" layoutX="10.0" layoutY="29.0" promptText="confirm password" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <TextField fx:id="passwordTextField" accessibleRole="PASSWORD_FIELD" layoutX="10.0" layoutY="29.0" prefHeight="25.0" prefWidth="218.0" promptText="password" GridPane.rowIndex="2" />
-            <TextField fx:id="birthDateTextField" promptText="birth date" GridPane.rowIndex="3" />
             <ButtonBar buttonOrder="" prefHeight="69.0" prefWidth="157.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <buttons>
                   <RadioButton mnemonicParsing="false" text="Male" />
                   <RadioButton mnemonicParsing="false" text="Female" />
                </buttons>
             </ButtonBar>
+            <DatePicker GridPane.rowIndex="3" />
          </children>
       </GridPane>
       <Button layoutX="268.0" layoutY="555.0" mnemonicParsing="false" onAction="#registerationAction" text="Register" />
