Fixing issues in homepage
update homepage images/ chatting area updated
new fonts

--- a/hermes-client/src/main/resources/views/homepage/HomePage.css
+++ b/hermes-client/src/main/resources/views/homepage/HomePage.css
@@ -1,19 +1,26 @@
 .mainbackground-color{
-  -fx-background-color:'#4A4D4A';
+  -fx-background-color:'#2B233C';
   
-  }
+}
   .background-color{
-    -fx-background-color:'#4A4D4A';
+    -fx-background-color:'#2B233C';
   }
   
+  .third-background{
+    -fx-background-color:'#307686'
+  }
+  .fourth-background{
+    -fx-background-color:'#FFFFFF'
+    
+  }
   .gray-background{
-    -fx-background-color:'#686868'
+    -fx-background-color:'#363A54'
   }
   
   .transparent-background{
     -fx-background-color:rgba(0,0,0,0);
   }
-  
+ 
   .radius{
     -fx-background-radius:10px;
   }
@@ -30,4 +37,8 @@
   .outgoing-bubble{
     -fx-background-color:'#7192D9';
     -fx-background-radius:10px;
+  }
+
+  .testing-font{
+    -fx-font-family: "Fresca-Regular";
   }
