--- a/hermes-client/src/main/resources/views/registration-view/registerationView.fxml
+++ b/hermes-client/src/main/resources/views/registration-view/registerationView.fxml
@@ -11,62 +11,83 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" stylesheets="@registeration.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" stylesheets="@registeration.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gov.iti.jets.controllers.RegistrationController">
    <children>
-      <VBox id="#my-vbox" prefHeight="600.0" prefWidth="508.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox id="my-vbox" alignment="CENTER" maxHeight="1.7976931348623157E308" prefHeight="600.0" prefWidth="508.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label prefHeight="65.0" prefWidth="469.0" text="Let The Hermes Begin...">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="65.0" prefWidth="469.0" text="Let The Hermes Begin...">
                <font>
                   <Font name="System Bold" size="32.0" />
                </font>
                <textFill>
                   <LinearGradient endX="1.0" endY="1.0">
                      <stops>
-                        <Stop color="#307686" />
-                        <Stop color="#1a106b" offset="0.41580756013745707" />
-                        <Stop color="#0062ff" offset="0.7219259785914602" />
-                        <Stop color="#2b233c" offset="1.0" />
+                        <Stop color="#ebebeb" />
+                        <Stop color="#7b74bc" offset="0.25105660228305093" />
+                        <Stop color="#bd00ff" offset="0.5954891969822645" />
+                        <Stop color="#f3f3f5" offset="1.0" />
                      </stops>
                   </LinearGradient>
                </textFill>
             </Label>
-            <Button id="registerationBtn" mnemonicParsing="false" onAction="#registerationAction" text="Register" />
-            <GridPane prefHeight="433.0" prefWidth="469.0">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="218.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="112.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="249.0" minWidth="10.0" prefWidth="230.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
+            <Button id="registeration-btn" mnemonicParsing="false" onAction="#registerationAction" text="Register" textFill="WHITE" />
+            <VBox alignment="CENTER">
                <children>
-                  <TextField fx:id="phoneNumberTextField" prefHeight="25.0" prefWidth="217.0" promptText="phone number" GridPane.columnIndex="2" />
-                  <TextField fx:id="userNameTextField" promptText="user name" />
-                  <TextField fx:id="emailTextField" layoutX="10.0" layoutY="29.0" promptText="email" GridPane.rowIndex="1" />
-                  <TextField fx:id="countryTextField" layoutX="10.0" layoutY="92.0" promptText="country" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <TextField fx:id="confirmPasswordTextField" layoutX="10.0" layoutY="29.0" promptText="confirm password" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <TextField fx:id="passwordTextField" accessibleRole="PASSWORD_FIELD" layoutX="10.0" layoutY="29.0" prefHeight="25.0" prefWidth="218.0" promptText="password" GridPane.rowIndex="2" />
-                  <ButtonBar buttonOrder="" prefHeight="69.0" prefWidth="157.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
-                     <buttons>
-                        <RadioButton fx:id="maleRadioButton" mnemonicParsing="false" text="Male" />
-                        <RadioButton fx:id="femaleRadioButton" mnemonicParsing="false" text="Female" />
-                     </buttons>
-                  </ButtonBar>
-                  <DatePicker fx:id="birthDateFeild" GridPane.rowIndex="3" />
+                  <GridPane alignment="CENTER" prefHeight="443.0" prefWidth="480.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="218.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="112.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="249.0" minWidth="10.0" prefWidth="230.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <TextField fx:id="phoneNumberTextField" prefHeight="25.0" prefWidth="217.0" promptText="phone number" GridPane.columnIndex="2" />
+                        <TextField fx:id="userNameTextField" promptText="user name" />
+                        <TextField fx:id="emailTextField" layoutX="10.0" layoutY="29.0" promptText="email" GridPane.rowIndex="1" />
+                        <TextField fx:id="countryTextField" layoutX="10.0" layoutY="92.0" promptText="country" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <TextField fx:id="confirmPasswordTextField" layoutX="10.0" layoutY="29.0" promptText="confirm password" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                        <TextField fx:id="passwordTextField" accessibleRole="PASSWORD_FIELD" layoutX="10.0" layoutY="29.0" prefHeight="25.0" prefWidth="218.0" promptText="password" GridPane.rowIndex="2" />
+                        <ButtonBar buttonOrder="" prefHeight="69.0" prefWidth="157.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                           <buttons>
+                              <VBox alignment="CENTER" prefHeight="104.0" prefWidth="218.0">
+                                 <children>
+                                    <RadioButton fx:id="maleRadioButton" mnemonicParsing="false" text="Male">
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                    </RadioButton>
+                                    <RadioButton fx:id="femaleRadioButton" mnemonicParsing="false" prefHeight="21.0" prefWidth="149.0" text="Female">
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
+                                    </RadioButton>
+                                 </children>
+                              </VBox>
+                           </buttons>
+                        </ButtonBar>
+                        <DatePicker fx:id="birthDateFeild" GridPane.rowIndex="3" />
+                     </children>
+                  </GridPane>
                </children>
-            </GridPane>
-            <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="123.0" text="already have account?" textFill="WHITE" />
-            <Hyperlink onAction="#loginAction" prefHeight="23.0" prefWidth="43.0" text="login" />
+            </VBox>
+            <HBox alignment="CENTER">
+               <children>
+                  <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="123.0" text="already have account?" textFill="WHITE" />
+                  <Hyperlink onAction="#loginAction" prefHeight="23.0" prefWidth="43.0" text="login" />
+               </children>
+            </HBox>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
