--- a/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
+++ b/hermes-client/src/main/resources/views/homepage/HomePageView.fxml
@@ -21,7 +21,7 @@
          <children>
             <VBox prefHeight="500.0" prefWidth="37.0" styleClass="background-color">
                <children>
-                  <ImageView fx:id="profilePicture" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="profileImageView" fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../images/icons8-iOS%20Filled-User.png" />
                      </image>
@@ -29,7 +29,7 @@
                         <Insets bottom="40.0" left="5.0" top="10.0" />
                      </VBox.margin>
                   </ImageView>
-                  <ImageView fx:id="chattingScreen" fitHeight="25.0" fitWidth="25.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="chatImageView" fitHeight="25.0" fitWidth="25.0" layoutX="10.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../images/icons8-iOS%20Glyph-Chat.png" />
                      </image>
@@ -37,7 +37,7 @@
                         <Insets left="5.0" top="20.0" />
                      </VBox.margin>
                   </ImageView>
-                  <ImageView fx:id="settings" fitHeight="25.0" fitWidth="25.0" layoutX="10.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="settingsImageView" fitHeight="25.0" fitWidth="25.0" layoutX="10.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../images/icons8-Material%20Sharp-Settings.png" />
                      </image>
@@ -45,13 +45,13 @@
                         <Insets left="5.0" top="20.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Pane prefHeight="200.0" prefWidth="200.0" />
-                  <ImageView fx:id="logout" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                  <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="1000.0" />
+                  <ImageView fx:id="logoutImageView" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../images/icons8-iOS%20Filled-Logout%20Rounded%20Left.png" />
                      </image>
                      <VBox.margin>
-                        <Insets left="10.0" top="100.0" />
+                        <Insets bottom="5.0" left="10.0" />
                      </VBox.margin>
                   </ImageView>
                </children>
@@ -68,7 +68,7 @@
                               <Insets left="4.0" right="2.0" top="3.0" />
                            </HBox.margin>
                         </ImageView>
-                        <TextField alignment="BASELINE_LEFT" onAction="#onSearchTextFieldClick" prefHeight="17.0" prefWidth="152.0" styleClass="transparent-background">
+                        <TextField fx:id="searchTextField" alignment="BASELINE_LEFT" onAction="#onSearchTextFieldClick" prefHeight="17.0" prefWidth="152.0" styleClass="transparent-background">
                            <padding>
                               <Insets left="10.0" />
                            </padding>
@@ -271,7 +271,7 @@
          <children>
             <HBox alignment="CENTER_LEFT" prefHeight="66.0" prefWidth="371.0">
                <children>
-                  <ImageView fitHeight="61.0" fitWidth="53.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="contactImageView" fitHeight="61.0" fitWidth="53.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../images/icons8-Cute%20Color-Circled%20User%20Male%20Skin%20Type%207.png" />
                      </image>
@@ -279,7 +279,7 @@
                         <Insets left="5.0" />
                      </HBox.margin>
                   </ImageView>
-                  <Label prefHeight="29.0" prefWidth="108.0" styleClass="testing-font" stylesheets="@HomePage.css" text="Hashem " textFill="WHITE">
+                  <Label prefHeight="29.0" prefWidth="100.0" styleClass="testing-font" stylesheets="@HomePage.css" text="Hashem " textFill="WHITE">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -312,7 +312,7 @@
             </HBox>
             <ScrollPane fx:id="sp_main" fitToHeight="true" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="389.0" prefWidth="521.0" styleClass="fourth-background" stylesheets="@HomePage.css" VBox.vgrow="ALWAYS">
                <content>
-                  <VBox fx:id="vbox_messages" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="1500.0" prefWidth="1500.0" styleClass="fourth-background" stylesheets="@HomePage.css" />
+                  <VBox fx:id="messagesVerticalBox" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="2500.0" prefWidth="2500.0" styleClass="fourth-background" stylesheets="@HomePage.css" />
                </content>
             </ScrollPane>
             <HBox prefHeight="39.0" prefWidth="521.0">
@@ -325,12 +325,12 @@
                         <Insets left="15.0" top="5.0" />
                      </HBox.margin>
                   </ImageView>
-                  <TextField fx:id="tf_message" prefHeight="26.0" prefWidth="220.0" HBox.hgrow="ALWAYS">
+                  <TextField fx:id="messageTextField" prefHeight="26.0" prefWidth="220.0" HBox.hgrow="ALWAYS">
                      <HBox.margin>
                         <Insets left="10.0" right="10.0" top="5.0" />
                      </HBox.margin>
                   </TextField>
-                  <Button fx:id="button_send" mnemonicParsing="false" text="Send">
+                  <Button fx:id="sendButton" mnemonicParsing="false" text="Send">
                      <HBox.margin>
                         <Insets right="5.0" top="5.0" />
                      </HBox.margin>
