--- a/hermes-client/src/main/resources/views/login/LoginView.fxml
+++ b/hermes-client/src/main/resources/views/login/LoginView.fxml
@@ -11,68 +11,64 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="200.0"
-            prefWidth="500.0"
-            xmlns="http://javafx.com/javafx/17" 
-            xmlns:fx="http://javafx.com/fxml/1" 
-            fx:controller="gov.iti.jets.presentation.controllers.LoginController">
-            
-   <center>
-      <VBox spacing="20.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox spacing="15.0">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-               <children>
-                  <Label text="Username">
-                     <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Apple Symbols" size="16.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="userNameTextField" HBox.hgrow="ALWAYS" />
-               </children>
-               <padding>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-               </padding>
-            </HBox>
-            <HBox spacing="15.0">
-               <children>
-                  <Label text="Password">
-                     <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </HBox.margin>
-                     <font>
-                        <Font name="Apple Symbols" size="16.0" />
-                     </font>
-                  </Label>
-                  <PasswordField fx:id="passwordPasswordField" HBox.hgrow="ALWAYS" />
-               </children>
-               <padding>
-                  <Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
-               </padding>
-            </HBox>
-         </children>
-         <BorderPane.margin>
-            <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-         </BorderPane.margin>
-      </VBox>
-   </center>
-   <bottom>
-      <HBox spacing="10.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button mnemonicParsing="false" onAction="#onRegistrationButtonClick" text="Registration" />
-            <Region HBox.hgrow="ALWAYS" />
-            <Button mnemonicParsing="false" onAction="#onProfileButtonClick" text="Profile" />
-            <Region HBox.hgrow="ALWAYS" />
-            <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onLoginButtonClick" text="Login" />
-         </children>
-         <BorderPane.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </BorderPane.margin>
-      </HBox>
-   </bottom>
+<BorderPane prefHeight="200.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gov.iti.jets.presentation.controllers.LoginController">
+
+	<center>
+		<VBox spacing="20.0" BorderPane.alignment="CENTER">
+			<children>
+				<HBox spacing="15.0">
+					<VBox.margin>
+						<Insets />
+					</VBox.margin>
+					<children>
+						<Label text="Username">
+							<HBox.margin>
+								<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+							</HBox.margin>
+							<font>
+								<Font name="Apple Symbols" size="16.0" />
+							</font>
+						</Label>
+						<TextField fx:id="userNameTextField" HBox.hgrow="ALWAYS" />
+					</children>
+					<padding>
+						<Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
+					</padding>
+				</HBox>
+				<HBox spacing="15.0">
+					<children>
+						<Label text="Password">
+							<HBox.margin>
+								<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+							</HBox.margin>
+							<font>
+								<Font name="Apple Symbols" size="16.0" />
+							</font>
+						</Label>
+						<PasswordField fx:id="passwordPasswordField" HBox.hgrow="ALWAYS" />
+					</children>
+					<padding>
+						<Insets bottom="16.0" left="16.0" right="16.0" top="16.0" />
+					</padding>
+				</HBox>
+			</children>
+			<BorderPane.margin>
+				<Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+			</BorderPane.margin>
+		</VBox>
+	</center>
+	<bottom>
+		<HBox spacing="10.0" BorderPane.alignment="CENTER">
+			<children>
+				<Button mnemonicParsing="false" onAction="#onRegistrationButtonClick" text="Registration" />
+				<Region HBox.hgrow="ALWAYS" />
+				<Button mnemonicParsing="false" onAction="#onProfileButtonClick" text="Profile" />
+				<Region HBox.hgrow="ALWAYS" />
+				<Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#onLoginButtonClick" text="Login" />
+			</children>
+			<BorderPane.margin>
+				<Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+			</BorderPane.margin>
+		</HBox>
+	</bottom>
 </BorderPane>
