--- a/hermes-client/src/main/resources/views/contact/ContactView.fxml
+++ b/hermes-client/src/main/resources/views/contact/ContactView.fxml
@@ -54,7 +54,7 @@
 				</StackPane>
 			</children>
 		</HBox>
-		<VBox fx:id="myvbox" layoutX="-1.0" layoutY="707.244384765625" prefHeight="511.0" prefWidth="501.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="290.0">
+		<VBox layoutX="-1.0" layoutY="707.244384765625" prefHeight="511.0" prefWidth="501.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-1.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="290.0">
 			<children>
 				<HBox alignment="CENTER" prefHeight="100.0" prefWidth="501.0">
 					<children>
