--- a/hermes-client/src/main/resources/views/profile/ProfileView.fxml
+++ b/hermes-client/src/main/resources/views/profile/ProfileView.fxml
@@ -66,7 +66,7 @@
 								<Insets />
 							</StackPane.margin>
 						</Circle>
-						<ImageView fx:id="changeProfilePictureImageView" fitHeight="30.0" fitWidth="30.0" onMouseClicked="#changeProgileImage" pickOnBounds="true" preserveRatio="true" StackPane.alignment="BOTTOM_RIGHT">
+						<ImageView fx:id="changeProfilePictureImageView" fitHeight="30.0" fitWidth="30.0" onMouseClicked="#changeProfileImage" pickOnBounds="true" preserveRatio="true" StackPane.alignment="BOTTOM_RIGHT">
 							<StackPane.margin>
 								<Insets bottom="10.0" right="10.0" />
 							</StackPane.margin>
@@ -151,7 +151,7 @@
 				</GridPane>
 			</children>
 		</VBox>
-		<StackPane id="back-stackpane" layoutX="30.0" layoutY="30.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
+		<StackPane id="back-stackpane" onMouseClicked="#backToPreviousScene" layoutX="30.0" layoutY="30.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
 			<children>
 				<ImageView fx:id="previousImageView" fitHeight="20.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
 					<image>
