--- a/hermes-client/src/main/resources/views/registeration/Registeration.css
+++ b/hermes-client/src/main/resources/views/registeration/Registeration.css
@@ -14,7 +14,7 @@
   -fx-text-fill: main-color;
   -fx-background-color: white;
   -fx-font-size: 15;
-  -fx-font-family: main-font-family;
+  -fx-font-family: "Ubuntu Mono";
 }
 
 #registeration-btn {
@@ -35,4 +35,64 @@
 }
 .radio-button:selected {
   -fx-background-color: main-color;
+}
+
+
+.radio-button {
+	-fx-text-fill:white;
+	-fx-font-size:18;
+	-fx-font-family: "Ubuntu Mono";
+}
+.radio-button .radio{
+    -fx-padding: 4px;
+    -fx-background-color: white;
+	
+}
+.radio-button:selected .radio .dot{
+    -fx-background-color: #2B233C;
+}
+
+.date-picker .arrow-button {
+	-fx-background-color: #2B233C;
+	-fx-background-radius: 0;
+}
+.date-picker .arrow-button:hover {
+	-fx-background-color: #685490;
+}
+.date-picker .arrow-button .arrow {
+	-fx-background-color: white;
+}
+.date-picker .cell {
+	-fx-background-color: white;
+}
+.date-picker .cell:hover {
+	-fx-background-color: #d1d1d1;
+}
+.date-picker .cell:focused {
+	-fx-background-color: #d1d1d1;
+}
+.date-picker .selected {
+	-fx-background-color: #2B233C;
+	-fx-text-fill: white;
+}
+.date-picker .selected:focused {
+	-fx-background-color: #2B233C;
+	-fx-text-fill: white;
+}
+.date-picker-popup  {
+	-fx-border-color: transparent;
+}
+.date-picker-popup .month-year-pane {
+	-fx-background-color: #2B233C;
+}
+.date-picker-popup .month-year-pane .label {
+	-fx-text-fill: white;
+}
+.date-picker-popup .week-number-cell {
+	-fx-text-fill: #685490;
+}
+.date-picker-popup .spinner .button .left-arrow,
+.date-picker-popup .spinner .button .right-arrow {
+	-fx-background-color: #685490;
+	-fx-focus-color: #685490;
 }
