--- a/hermes-server/src/main/resources/views/announcement/AnnouncementView.fxml
+++ b/hermes-server/src/main/resources/views/announcement/AnnouncementView.fxml
@@ -1,45 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane stylesheets="@AnnouncementStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gov.iti.jets.presentation.controllers.AnnouncementController">
-   <center>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
-         <children>
-            <Label fx:id="textLabel" alignment="CENTER" layoutX="150.0" layoutY="32.0" prefHeight="35.0" prefWidth="300.0" text="Annoucement Screen">
-               <font>
-                  <Font size="29.0" />
-               </font>
-            </Label>
-            <ScrollPane fx:id="mainScrollPane" fitToWidth="true" layoutX="42.0" layoutY="104.0" prefHeight="241.0" prefWidth="517">
-               <content>
-                  <VBox fx:id="announcementMessagesVBox" prefHeight="230" prefWidth="517" />
-               </content>
-            </ScrollPane>
-            <TextField fx:id="messageTextField" layoutX="42.0" layoutY="353.0" onAction="#stageMessages" prefHeight="25.0" prefWidth="517.0" />
-         </children>
-      </AnchorPane>
-   </center>
-   <bottom>
-      <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="15.0" />
-         </BorderPane.margin>
-         <children>
-            <Button fx:id="sendMessageButton" alignment="CENTER" mnemonicParsing="false" text="SEND MESSAGE" />
-            <Pane prefHeight="28.0" prefWidth="256.0" />
-            <Button fx:id="statisticsButton" mnemonicParsing="false" prefHeight="28.0" prefWidth="125.0" text="Show Statistics" />
-         </children>
-      </HBox>
-   </bottom>
-</BorderPane>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1024.0" stylesheets="@AnnouncementStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gov.iti.jets.presentation.controllers.AnnouncementController">
+   <children>
+      <Label fx:id="textLabel" alignment="CENTER" layoutX="345.0" layoutY="37.0" prefHeight="35.0" prefWidth="300.0" text="Annoucement Screen" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="38.0">
+         <font>
+            <Font size="29.0" />
+         </font>
+      </Label>
+      <ScrollPane fx:id="mainScrollPane" fitToWidth="true" layoutX="42.0" layoutY="104.0" prefHeight="400.0" prefWidth="517.0" AnchorPane.bottomAnchor="220.0" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="100.0">
+         <content>
+            <VBox fx:id="announcementMessagesVBox" />
+         </content>
+      </ScrollPane>
+      <TextField fx:id="messageTextField" layoutX="80.0" layoutY="518.0" onAction="#stageMessages" prefHeight="25.0" prefWidth="517.0" AnchorPane.bottomAnchor="176.06832075631198" AnchorPane.leftAnchor="80.0" AnchorPane.rightAnchor="80.0" />
+      <Button fx:id="sendMessageButton" alignment="CENTER" layoutX="80.0" layoutY="563.0" mnemonicParsing="false" text="Send Boradcast" AnchorPane.bottomAnchor="128.07620392050183" AnchorPane.leftAnchor="80.0" />
+      <Button fx:id="statisticsButton" layoutX="818.0" layoutY="563.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="125.0" text="Show Statistics" AnchorPane.bottomAnchor="128.07620392050183" AnchorPane.rightAnchor="80.33109289597348" />
+   </children>
+</AnchorPane>
