--- a/hermes-client/src/main/resources/views/registeration/RegisterationView.fxml
+++ b/hermes-client/src/main/resources/views/registeration/RegisterationView.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1024.0" stylesheets="@Registeration.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gov.iti.jets.presentation.controllers.RegisterationController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1024.0" stylesheets="@Registeration.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gov.iti.jets.presentation.controllers.RegisterationController">
    <children>
       <VBox id="my-vbox" alignment="CENTER" maxHeight="1.7976931348623157E308" prefHeight="600.0" prefWidth="508.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -45,7 +45,7 @@
                   <GridPane alignment="CENTER" vgap="30.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="218.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="218.0" minWidth="10.0" prefWidth="112.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="10.0" prefWidth="10.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="249.0" minWidth="10.0" prefWidth="230.0" />
                      </columnConstraints>
                      <rowConstraints>
@@ -76,11 +76,14 @@
                   </GridPane>
                </children>
             </VBox>
-            <Button id="registeration-btn" mnemonicParsing="false" onAction="#registerationAction" text="Register" textFill="WHITE" />
+            <Button id="registeration-btn" mnemonicParsing="false" onAction="#registerationAction" prefHeight="42.0" prefWidth="120.0" style="-fx-font-weight: bold;" text="Register" textFill="WHITE">
+               <VBox.margin>
+                  <Insets top="30.0" />
+               </VBox.margin></Button>
             <HBox alignment="CENTER">
                <children>
-                  <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="150.0" text="Already have an account?" textFill="WHITE" />
-                  <Hyperlink onAction="#loginAction" prefHeight="23.0" prefWidth="43.0" style="-fx-font-weight: bold;" text="Login" textFill="#307686" underline="true" />
+                  <Label contentDisplay="RIGHT" prefHeight="18.0" prefWidth="152.0" text="Already have an account?" textFill="WHITE" />
+                  <Hyperlink onAction="#loginAction" prefHeight="26.0" prefWidth="45.0" style="-fx-font-weight: bold;" text="Login" textFill="#307686" underline="true" />
                </children>
             </HBox>
          </children>
